--- a/holamundo/app/src/main/AndroidManifest.xml
+++ b/holamundo/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layoutEjemplos.constraintLayout.ConstraintLayout">
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".layoutEjemplos.constraintLayout.ConstraintLayout" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Main2Activity" />
         <activity
@@ -29,7 +32,10 @@
             android:label="@string/title_activity_linear_layout" />
         <activity
             android:name=".layoutEjemplos.relativeLayout.RelativeLayout"
-            android:label="@string/title_activity_relative_layout"></activity>
+            android:label="@string/title_activity_relative_layout" />
+        <activity
+            android:name=".MenuActivity"
+            android:label="@string/title_activity_menu"></activity>
     </application>
 
 </manifest>
