--- a/MarvelvsDc/app/src/main/AndroidManifest.xml
+++ b/MarvelvsDc/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SettigActivity"
+            android:label="@string/title_activity_settig"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
