--- a/MarvelvsDc/app/src/main/AndroidManifest.xml
+++ b/MarvelvsDc/app/src/main/AndroidManifest.xml
@@ -12,23 +12,24 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/AppThemeMarvel.NoActionBar" >
+            android:theme="@style/AppThemeMarvel.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MenuActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppThemeMarvel.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppThemeMarvel.NoActionBar"></activity>
         <activity
             android:name=".SettigActivity"
             android:label="@string/title_activity_settig"
+            android:theme="@style/AppThemeMarvel.NoActionBar" />
+        <activity
+            android:name=".PersonajeActivity"
+            android:label="@string/title_activity_personaje"
             android:theme="@style/AppThemeMarvel.NoActionBar"></activity>
     </application>
 
