--- a/MarvelvsDc/app/src/main/AndroidManifest.xml
+++ b/MarvelvsDc/app/src/main/AndroidManifest.xml
@@ -33,23 +33,36 @@
             android:name=".TextToSpeech.TextToSpeechActivity"
             android:label="@string/title_activity_text_to_speech"
             android:theme="@style/AppThemeMarvel.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".activities.LocalizacionActivity"
+            android:label="@string/title_activity_localizacion"
+            android:theme="@style/AppThemeMarvel.NoActionBar"></activity>
+        <activity
+            android:name=".activities.LocalizacionBasica"
+            android:label="@string/title_activity_localizacion_basica"
+            android:theme="@style/AppThemeMarvel.NoActionBar"></activity>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".activities.MapsActivity"
+            android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".activities.LocalizacionActivity"
-            android:label="@string/title_activity_localizacion"
-            android:theme="@style/AppThemeMarvel.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".activities.LocalizacionBasica"
-            android:label="@string/title_activity_localizacion_basica"
-            android:theme="@style/AppThemeMarvel.NoActionBar">
-
         </activity>
     </application>
 
